Require Java 11.